# git-aicommit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  main.py  mise.toml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  claude-renovate-review.yml  release-please.yml
src/: cli.py
src/git_aicommit/: __init__.py  ai.py  cli.py  config.py  error.py  git.py  prompt.py  provider.py
src/lib/: ai.py  config.py
