[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-aicommit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "gitpython>=3.1.45",
    "langchain-core>=1.0.5",
    "langchain-ollama>=1.0.0",
    "poml>=0.0.8",
    "pydantic>=2.12.4",
    "readchar>=4.2.1",
    "rich>=14.2.0",
]

[project.scripts]
git-aicommit = "git_aicommit.cli:root"

[tool.setuptools.packages.find]
where = ["src"]
include = ["git_aicommit*"]

[dependency-groups]
dev = [
    "click-man>=0.5.1",
    "ruff>=0.14.5",
]
