[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-aicommit"
version = "0.11.0"
authors = [
    { name = "Koki Sato", email = "kou.pg.0131@gmail.com" },
]
description = "Generate commit messages using AI."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "gitpython>=3.1.45",
    "halo>=0.0.31",
    "langchain-anthropic>=1.1.0",
    "langchain-aws>=1.0.0",
    "langchain-core>=1.0.5",
    "langchain-google-genai>=3.0.3",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "langsmith>=0.4.43",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.4",
    "readchar>=4.2.1",
    "rich>=14.2.0",
]

[project.urls]
Homepage = "https://github.com/koki-develop/git-aicommit"
Issues = "https://github.com/koki-develop/git-aicommit/issues"

[project.scripts]
git-aicommit = "git_aicommit.cli:root"

[tool.setuptools.packages.find]
where = ["src"]
include = ["git_aicommit*"]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.5",
]
